5-nat-gw.tf
resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.ig] # EIP requires IGW to exist before being created
  tags = {
    Name = "master-class-eip"
  }

}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.PublicSubnet-1.id
  depends_on    = [aws_internet_gateway.ig]


  tags = {
    Name        = "masterclass-main-nat"
  }

}
